<resources>
    <string name="app_name">B2BSALEON</string>

    <string name="error_no_internet_title">No Network</string>
    <string name="error_no_internet">Please check your network connection.</string>
    <string name="error_title">Error</string>
    <string name="error_failure">Sorry..! Something went wrong at our end, Please try again after some time.</string>
    <string name="error_time_out">Oops. Timeout error!</string>
    <string name="error_request_timeout">Connection timeout.</string>
    <string name="loading_message">Please wait..</string>
    <string name="email_field_required">Please enter email address.</string>
    <string name="password_field_required">Please enter password.</string>
    <string name="error_invalid_email">Please enter valid email address.</string>
    <string name="login_response_invalid_login">Invalid login credentials,Please contact administrator</string>
    <string name="login_response_contact_admin_login">Please contact administrator.</string>
    <string name="database_details">Details saved Successfully.</string>
    <string name="success_password">Password changed Successfully.</string>
    <string name="order">Order placed Successfully.</string>
    <string name="noitems">No Orders Found</string>
    <string name="preview">This Preview is unavailable untill the tripsheet stock is verified</string>
    <string name="stock">This Trip Sheet Stock is not yet dispatched.</string>
    <string name="stockv">This Trip Sheet Stock is not yet verified.</string>
    <string name="stocksuccess">Stock Dispatched Successfully.</string>
    <string name="stockverify">Stock Verified Successfully.</string>
    <string name="deliveryfail">This Preview is unavailable untill the tripsheet delivery is saved.</string>
    <string name="returnsfail">This Preview is unavailable untill the tripsheet returns is saved.</string>
    <string name="deliveryexceed">Delivery quantity for one of the product exceeds available stock, please check it.</string>
    <string name="deliverylimit">Please select at least one product to save.</string>
    <string name="deliverylimit_sort">There is no available stock to sort.</string>
    <string name="take_order_sort">Please select at least one product to sort.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="print">Please save details before print</string>
    <string name="tripsave">Trip sheet closed successfully.</string>
    <string name="tripfail">Trip sheet closing failed.</string>
    <string name="agent">Cannot Access InActive Customers.</string>
    <string name="tripclose">Cannot view the tripsheet as it is closed</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="history">Recent History</string>
    <string name="payments">Payments</string>
    <string name="routes">Routes</string>
    <string name="customers">Customers</string>
    <string name="delivery">Deliveries</string>
    <string name="sales">Sales</string>
    <string name="salereturns">Returns</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>

    <string name="delivery_btn">Delivery</string>
    <string name="view_btn">View</string>
    <string name="order_btn">Take Order</string>
    <string name="info_btn">Info</string>
    <string name="delete_btn">Stock</string>
    <string name="more_btn">More...</string>
    <string name="approve_btn">Approve</string>

    <string name="myroutes_btm">Trips</string>
    <string name="customers_btm">Agents</string>
    <string name="products_btm">Products</string>
    <string name="settings_btm">Settings</string>
    <string name="sales_btm">Sales</string>
    <string name="dashboard_btm">Home</string>
    <string name="orders_btm">Take Orders</string>
    <string name="sales_list">Sales</string>

    Sales List
    <string name="tpcorders_btm">Orders</string>
    <string name="print_btm">Print</string>
    <string name="closeTrip_btm">Close Trips</string>
    <string name="payment_btm">Payment</string>
    <string name="delivery_btm">Deliveries</string>
    <string name="return_btm">Return</string>
    <string name="payments_btn">SALES</string>
    <string name="retailers_btn">Retailers</string>


    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>

    <string name="title_activity_base">BaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="rupee_symbol">\u20B9</string>
    <string name="rupee_text">\u20A8</string>

    <string-array name="req_type">
        <item>Repeated</item>
        <item>One Time</item>
    </string-array>


    <string-array name="return_type">
        <item>Sale Return</item>
        <!--<item>Leakage</item>-->
    </string-array>

    <string-array name="mop_type">
        <item>Cash</item>
        <!--<item>Card</item>-->
        <item>Cheque</item>
    </string-array>

    <string-array name="rep_type">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>


</resources>