<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rightclickit.b2bsaleon.activities.Products_Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:layout_marginBottom="60dp"
        >

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />




    </LinearLayout>
    <!--<android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginRight="16dp"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_dialog_email" />
-->



    <LinearLayout
        android:id="@+id/BottomOptionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/colorPrimary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/DashboardLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/dashboard_icon_grey"
                android:text="@string/dashboard_btm"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/TripSheetsLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_routes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/route_green"
                android:gravity="center"
                android:text="@string/myroutes_btm"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/CustomersLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:id="@+id/tvrouts_customerN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/customers_grey"
                android:text="@string/customers_btm"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ProductsLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_shopping_cart_orange_24dp"
                android:gravity="center"
                android:text="@string/products_btm"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/TDCLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/sales_green"
                android:gravity="center"
                android:text="@string/sales_btm"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"/>
        </LinearLayout>

    </LinearLayout>

    </LinearLayout>


</FrameLayout>
