<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="270dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_weight="0.01"
            android:contentDescription="Logo"
            android:src="@drawable/b2b1" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:cursorVisible="false"
                android:hint="@string/email"
                android:longClickable="false"
                android:paddingTop="20dp"
                android:imeActionId="@+id/login"
                android:textColor="@color/greydark"
                android:textSize="12sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.19"
                android:cursorVisible="false"
                android:drawablePadding="-20dp"
                android:imeActionId="@+id/login"
                android:ems="10"
                android:fontFamily="sanserif"
                android:hint="@string/password"
                android:textColor="@color/greydark"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/greydark"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
