<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background">

    <LinearLayout android:id="@+id/tpsBottomOptionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">
        <View android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/colorPrimary" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/RetailersLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_retailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_close_green_24dp"
                    android:text="@string/closeTrip_btm"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ProductsLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_products"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/save_icon_green"
                    android:gravity="center"
                    android:text="@string/approve_btn"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/TDCLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/print_green"
                    android:gravity="center"
                    android:text="@string/print_btm"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@id/tpsBottomOptionsLayout">

        <ListView
            android:id="@+id/RouteStockList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:smoothScrollbar="true"
            />
    </LinearLayout>


</RelativeLayout>